--- a/clients/react-app/src/layouts/VideoLayout.module.css
+++ b/clients/react-app/src/layouts/VideoLayout.module.css
@@ -1,133 +1,127 @@
-.grid_item {
-    background-color: red;
-    overflow: hidden;
-    border-radius: 10px;
-}
-
 .layout_grid_wrapper {
-    container-type: inline-size;
-    container-name: layout_grid_wrapper;
+  --space: 20px;
+  container-type: inline-size;
+  container-name: layout_grid_wrapper;
 
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .layout_grid_inner {
+    flex: 1;
     width: 100%;
     height: 100%;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
+  }
 
+  @container layout_grid_wrapper (max-width: $mantine-breakpoint-md) {
+    .layout_grid_inner {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      padding: var(--space) var(--space) 0px var(--space);
+      gap: var(--space);
+      grid-template-areas:
+        "video_player_wrapper"
+        "sidebar_wrapper "
+        "overview_wrapper ";
+    }
+  }
+
+  @container layout_grid_wrapper (min-width: $mantine-breakpoint-md ) {
+    /* tablet */
+    .layout_grid_inner {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 4fr 100px;
+      padding: var(--space) var(--space) 0px var(--space);
+      gap: var(--space);
+      grid-template-areas:
+        "video_player_wrapper video_player_wrapper sidebar_wrapper"
+        "overview_wrapper overview_wrapper overview_wrapper";
+    }
+  }
+
+  .video_player_wrapper {
+    grid-area: video_player_wrapper;
+    width: 100%;
+    height: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: black;
 
-    .layout_grid_inner {
-        flex: 1;
-        width: 100%;
-        height: 100%;
-        width: 100%;
-        height: 100%;
+    background-color: grey;
+    overflow: hidden;
+    border-radius: 10px;
+
+    video {
+      /* z-index: -1;            */
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
-
-    
-    @container layout_grid_wrapper (max-width: 700px) {
-        .layout_grid_inner {
-           
-            display: grid; 
-            grid-template-columns: 1fr; 
-            grid-template-rows: 1fr 1fr 1fr;
-            padding: 5px;
-            gap: 5px;
-            grid-template-areas: 
-            "video_player_wrapper"
-            "sidebar_wrapper "
-            "overview_wrapper ";
-        
-           
-        }
-    }
-    
-
-    @container layout_grid_wrapper (min-width: 700px) {
-        /* tablet */
-        .layout_grid_inner {
-           
-            display: grid; 
-            grid-template-columns: 1fr 1fr 1fr; 
-            grid-template-rows: 4fr 100px;
-            padding: 5px;
-            gap: 5px;
-            grid-template-areas: 
-              "video_player_wrapper video_player_wrapper sidebar_wrapper"
-              "overview_wrapper overview_wrapper overview_wrapper"; 
-          }
-    }
-   
-
-    .video_player_wrapper {
-        grid-area: video_player_wrapper;
-        width: 100%;
-        height: 100%;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: black;
-
-    
-        video {
-
-            /* z-index: -1;            */
-            width: 100%; 
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .modal {
-
-            border-radius: 0;
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-       
-            &[data-isOpen="false"] {
-                width: 60px;
-                height: 60px;
-                background-color: black;
-                opacity: 0.3;
-
-            }
-        
-            &[data-isOpen="true"] {
-                width:100%;
-                height: 100%;
-                background-color: black;
-            }
-
-            .modal_content {
-                width: calc(100% - 10px);
-                height: calc(100% - 10px);
-              }
-          }
+    .modal_icon {
+      background-color: transparent;
+      z-index: 20;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
     }
 
-    .sidebar_wrapper {
-        grid-area: sidebar_wrapper;
-        
-    }
-    .overview_wrapper {
-        grid-area: overview_wrapper;
-        width: 100%;
-        /* grid-column: -1 / 1; */
-      
+    .modal {
+      border-radius: 0;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
+      overflow: hidden;
+
+      .modal_content {
+        width: calc(100% - 10px);
+        height: calc(100% - 10px);
+      }
     }
+  }
+
+  .sidebar_wrapper {
+    grid-area: sidebar_wrapper;
+
+    background-color: grey;
+    overflow: hidden;
+    border-radius: 10px;
+  }
+  .overview_wrapper {
+    grid-area: overview_wrapper;
+    width: 100%;
+    background-color: gray;
+    /* grid-column: -1 / 1; */
+
+    overflow: hidden;
+    border-radius: 10px 10px 0px 0px;
+
+    &:hover {
+      filter: invert(100%);
+      grid-column: 0 / -1;
+      grid-row: 0 / -1;
+    }
+  }
 }
-
-
-
-  
-
-
