--- a/clients/react-app/src/component/SlimNavbar.module.css
+++ b/clients/react-app/src/component/SlimNavbar.module.css
@@ -1,10 +1,18 @@
 .navbar {
-  width: rem(80px);
-  height: rem(750px);
   padding: var(--mantine-spacing-md);
   display: flex;
-  flex-direction: column;
-  background-color: var(--mantine-color-blue-filled);
+  background-color: grey;
+
+  &[data-orientation="vertical"] {
+    width: rem(80px);
+    height: 100%;
+    flex-direction: column;
+  }
+  &[data-orientation="horizontal"] {
+    height: rem(80px);
+    width: 100%;
+    flex-direction: row;
+  }
 }
 
 .navbarMain {
