--- a/clients/react-app/src/layouts/VideoLayout.module.css
+++ b/clients/react-app/src/layouts/VideoLayout.module.css
@@ -2,11 +2,9 @@
   --space: 20px;
   container-type: inline-size;
   container-name: layout_grid_wrapper;
-
   width: 100%;
   height: 100%;
   min-height: 100vh;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,36 +14,55 @@
     flex: 1;
     width: 100%;
     height: 100%;
-    width: 100%;
-    height: 100%;
   }
 
   @container layout_grid_wrapper (max-width: $mantine-breakpoint-md) {
     .layout_grid_inner {
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      padding: var(--space) var(--space) 0px var(--space);
+      grid-template-rows: min-content repeat(3, 1fr);
+      padding: var(--space);
       gap: var(--space);
       grid-template-areas:
+        "horizontal_slim_navbar_wrapper"
         "video_player_wrapper"
-        "sidebar_wrapper "
-        "overview_wrapper ";
+        "sidebar_wrapper"
+        "overview_wrapper";
+    }
+    .vertical_slim_navbar_wrapper {
+      display: none;
     }
   }
 
-  @container layout_grid_wrapper (min-width: $mantine-breakpoint-md ) {
-    /* tablet */
+  @container layout_grid_wrapper (min-width: $mantine-breakpoint-md) {
     .layout_grid_inner {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: min-content 1fr 1fr 1fr;
       grid-template-rows: 4fr 100px;
-      padding: var(--space) var(--space) 0px var(--space);
+      padding: var(--space);
       gap: var(--space);
       grid-template-areas:
-        "video_player_wrapper video_player_wrapper sidebar_wrapper"
-        "overview_wrapper overview_wrapper overview_wrapper";
+        "vertical_slim_navbar_wrapper video_player_wrapper video_player_wrapper sidebar_wrapper"
+        "overview_wrapper overview_wrapper overview_wrapper overview_wrapper";
     }
+  }
+
+  .vertical_slim_navbar_wrapper {
+    grid-area: vertical_slim_navbar_wrapper;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+    overflow: hidden;
+    border-radius: 10px;
+  }
+
+  .horizontal_slim_navbar_wrapper {
+    grid-area: horizontal_slim_navbar_wrapper;
+    width: 100%;
+    height: min-content;
+    background-color: grey;
+    overflow: hidden;
+    border-radius: 10px;
   }
 
   .video_player_wrapper {
@@ -58,13 +75,10 @@
     align-items: center;
     justify-content: center;
     background-color: black;
-
-    background-color: grey;
     overflow: hidden;
     border-radius: 10px;
 
     video {
-      /* z-index: -1;            */
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -92,7 +106,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
       overflow: hidden;
 
       .modal_content {
@@ -104,19 +117,24 @@
 
   .sidebar_wrapper {
     grid-area: sidebar_wrapper;
-
     background-color: grey;
     overflow: hidden;
     border-radius: 10px;
   }
+
   .overview_wrapper {
     grid-area: overview_wrapper;
+    overflow: hidden;
+    border-radius: 10px;
+
+    &[data-expanded="true"] {
+      z-index: 99;
+      grid-column: 1/-1;
+      grid-row: 1/-1;
+    }
+
     width: 100%;
     background-color: gray;
-    /* grid-column: -1 / 1; */
-
-    overflow: hidden;
-    border-radius: 10px 10px 0px 0px;
 
     &:hover {
       filter: invert(100%);
