--- a/clients/react-app/src/component/ToolsBar/index.module.css
+++ b/clients/react-app/src/component/ToolsBar/index.module.css
@@ -1,8 +1,9 @@
 .tools_panel_container {
   position: absolute;
-  bottom: 24px;
+  bottom: 0px;
+  top: 0px;
   right: 0;
-  left: 0;
+  width: min-content;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,19 +14,21 @@
   border-radius: 12px;
   background-color: var(--color-surface-panel);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .tools_panel_section {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 12px;
 }
 
 .seperator {
-  width: 1px;
+  height: 1px;
   background-color: rgba(0, 0, 0, 0.1);
   align-self: stretch;
 }
