--- a/clients/react-app/src/layouts/VideoLayout.module.css
+++ b/clients/react-app/src/layouts/VideoLayout.module.css
@@ -1,4 +1,5 @@
 .layout_grid_wrapper {
+  --badge-radius: 60px;
   --space: 20px;
   container-type: inline-size;
   container-name: layout_grid_wrapper;
@@ -88,8 +89,8 @@
       position: absolute;
       top: 0px;
       left: 0px;
-      width: 60px;
-      height: 60px;
+      width: var(--badge-radius);
+      height: var(--badge-radius);
       display: flex;
       align-items: center;
       justify-content: center;
