--- a/clients/react-app/src/App.css
+++ b/clients/react-app/src/App.css
@@ -1,10 +1,7 @@
 * {
   box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
+  padding: 0;
+  margin: 0;
 }
 
 html,
@@ -17,9 +14,4 @@ body,
   max-width: 100vw;
   max-height: 100vh;
   overflow: hidden;
-}
-
-/* Typography */
-body {
-  overscroll-behavior: none;
 }
