--- a/clients/react-app/src/component/labels/Label.module.css
+++ b/clients/react-app/src/component/labels/Label.module.css
@@ -31,16 +31,16 @@
       var(--badge-radius);
   }
 
-  &[data-arrow-layout="top-left"][data-isOpen="true"] {
+  &[data-arrow-layout="top-left"][data-open="true"] {
     border-radius: 0px 10px 10px 10px;
   }
-  &[data-arrow-layout="top-right"][data-isOpen="true"] {
+  &[data-arrow-layout="top-right"][data-open="true"] {
     border-radius: 10px 0px 10px 10px;
   }
-  &[data-arrow-layout="bottom-left"][data-isOpen="true"] {
+  &[data-arrow-layout="bottom-left"][data-open="true"] {
     border-radius: 10px 10px 10px 0px;
   }
-  &[data-arrow-layout="bottom-right"][data-isOpen="true"] {
+  &[data-arrow-layout="bottom-right"][data-open="true"] {
     border-radius: 10px 10px 0px 10px;
   }
 
@@ -105,7 +105,7 @@
       background-color: #2e2e2e;
 
       overflow: hidden;
-      &[data-isOpen="true"] {
+      &[data-open="true"] {
         min-width: 200px;
         width: 100%;
         height: 100%;
