--- a/clients/react-app/src/component/tabs/tabs.module.css
+++ b/clients/react-app/src/component/tabs/tabs.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
 
-  nav {
+  .tab_header_container {
     background-color: transparent;
     padding: 5px 5px 0;
     border-radius: 10px;
@@ -23,7 +23,7 @@
     overflow: hidden;
   }
 
-  .tabs {
+  .tab_headers_group {
     width: 100%;
     flex-grow: 1;
     display: flex;
@@ -31,14 +31,13 @@
     align-items: flex-end;
     flex-wrap: nowrap;
     flex-direction: row;
-    width: 420px;
+    max-width: 420px;
   }
 
-  main {
+  .tabs_main {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 128px;
     flex-grow: 1;
     user-select: none;
   }
@@ -119,7 +118,7 @@
     background: inherit;
   }
 
-  .add-item {
+  .add_item {
     border-radius: 50%;
     border: 0;
     cursor: pointer;
@@ -137,11 +136,11 @@
 
     background-color: transparent;
     border: 0px solid transparent;
-  }
 
-  .add-item:disabled {
-    opacity: 0.4;
-    cursor: default;
-    pointer-events: none;
+    &:disabled {
+      opacity: 0.4;
+      cursor: default;
+      pointer-events: none;
+    }
   }
 }
