--- a/clients/react-app/src/layouts/VideoChapter.module.css
+++ b/clients/react-app/src/layouts/VideoChapter.module.css
@@ -10,8 +10,8 @@
   display: grid;
   height: 100vh;
   width: 100vw;
-  grid-template-columns: [col-start] 0 minmax(0, 1fr) 0 [col-end];
-  grid-template-rows: [row-start] 0 48px minmax(0, 1fr) 48px 0px [row-end];
+  grid-template-columns: [col-start] 0 [col-inner-start] minmax(0, 1fr) [col-inner-end] 0 [col-end];
+  grid-template-rows: [row-start] 0 [row-inner-start] 48px minmax(0, 1fr) 48px [row-inner-end] 0px [row-end];
   grid-template-areas:
     ". . ."
     ". main ."
@@ -31,7 +31,8 @@
 
     &[data-expanded="true"] {
       z-index: 99;
-      grid-area: row-start / col-start / row-end / col-end;
+      grid-area: row-inner-start / col-inner-start / row-inner-end /
+        col-inner-end;
     }
     &[data-expanded="false"] {
       padding: 0px 20px;
@@ -116,8 +117,6 @@
       height: 100%;
 
       flex: 1;
-      min-width: fit-content;
-      max-width: max(max-content, 200px);
 
       position: relative;
       display: flex;
