--- a/clients/react-app/src/component/tabs/tabs.module.css
+++ b/clients/react-app/src/component/tabs/tabs.module.css
@@ -40,6 +40,9 @@
     align-items: center;
     flex-grow: 1;
     user-select: none;
+    height: 100%;
+    overflow-y: scroll;
+    padding: 20px;
   }
 
   ul,
