--- a/clients/react-app/src/component/ScrollTimeline.module.css
+++ b/clients/react-app/src/component/ScrollTimeline.module.css
@@ -1,36 +1,57 @@
 .scroll_container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  /* 
+  We're using container queries so we can explicity set 
+  the child elements to a size relative to its parent 
+  container height
+  */
+  .sections {
+    container-type: inline-size;
+    container-name: sections;
+
+    box-sizing: border-box;
+
+    position: relative;
     width: 100%;
-    height: 100%;
-    overflow-y: scroll;
+    height: max-content;
+    background: red;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
-  
-    .sections {
-      position: relative;
-      width: 100%;
-      height: max-content;
+    gap: 4px;
+    padding: 0 4px 0 4px;
 
-      .progress_bar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: 4px;
-        background: red;
-        transform-origin: 0%;
-  
-      }
+    /* @container sections () {
+    
+    } */
+
+    /* this is to trigger a gap at start and end */
+    &:before,
+    &:after {
+      content: "";
     }
 
-  
     .section_item {
-        height: 400px;
-       width: 100%;
-       background-color: green;
+      min-height: 100cqh;
+      width: 100cqw;
+      background-color: green;
+      padding: 2rem;
     }
+
+    .progress_bar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 4px;
+      background: red;
+      transform-origin: 0%;
+    }
+  }
 }
-
-
-
