--- a/clients/react-app/src/component/AudioTimeBar.module.css
+++ b/clients/react-app/src/component/AudioTimeBar.module.css
@@ -1,6 +1,18 @@
 
 .container {
+    display: flex;
     width: 100%;
-    height: 100%;
-    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .controls {
+        width: 100%;
+        background-color: transparent;
+    }
+    .timeline_container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
 }
