--- a/clients/react-app/src/component/AudioTrack.module.css
+++ b/clients/react-app/src/component/AudioTrack.module.css
@@ -1,17 +1,21 @@
+
 .audiotrack_container {
   width: 100%;
   height: 100%;
   container-type: inline-size;
   container-name: audiotrack_container;
 
-  background-color: green;
+  background-color: transparent;
 
-  /* border-right: 1px dashed black; */
+
+ 
 
   .relative_container {
     position: relative;
     width: 100%;
     height: 100%;
+
+   
 
     .audiotrack_label {
       position: absolute;
